<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/border_a"
    android:padding="10dp" >
    
<TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView style="@style/DataLabel"
            android:id="@+id/textView1"
            android:text="@string/Metallo" />

        <TextView
            android:id="@+id/metallo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView style="@style/DataLabel"
            android:id="@+id/textView3"
            android:text="@string/Forma" />

        <TextView
            android:id="@+id/forma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView style="@style/DataLabel"
            android:id="@+id/textView5"
            android:text="@string/Diametro" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/diametroValore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="" />

            <TextView
                android:id="@+id/diametroUnita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    </TableRow>

    <TableRow
        android:id="@+id/tableRow4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView style="@style/DataLabel"
            android:id="@+id/textView7"
            android:text="@string/Peso" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/pesoValore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="" />

            <TextView
                android:id="@+id/pesoUnita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    </TableRow>

</TableLayout>