<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent" 
    android:background="@drawable/border_a"
    android:padding="10dp"     
    >

    <TableRow
        android:id="@+id/tableRow1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView style="@style/DataLabel"
            android:id="@+id/textView1"
            android:text="@string/Luogo" />

        <TextView
            android:id="@+id/luogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView  style="@style/DataLabel"
            android:id="@+id/textView3"
            android:text="@string/Data" />

        <TextView
            android:id="@+id/data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="" />

    </TableRow>

    <TableRow
        android:id="@+id/tableRow3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView style="@style/DataLabel"
            android:id="@+id/textView5"
            android:text="@string/Prezzo" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <TextView
                android:id="@+id/prezzoValore"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingRight="5dp"
                android:text="" />

            <TextView
                android:id="@+id/prezzoValuta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="" />

        </LinearLayout>

    </TableRow>

</TableLayout>